[package]
name = "arachnid-shield"
version = "0.1.0"
edition = "2021"
authors = ["Aalekh Patel <aalekh@protectchildren.ca>"]
readme = "README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"

[dependencies]
base64 = "0.21.0"
mime = "0.3.17"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
url = "2.3.1"
mime_guess = "2.0.4"

[dev-dependencies]
test-case = "3.1.0"
tokio = { version = "1", features = ["full"] }